# invariant-hedging

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONFIGS.md  CONTRIBUTING.md  DATA.md  Dockerfile  Makefile  Paper.md  README.md  RELEASE.md  REPORTING_GUIDE.md  REPRODUCE.md  RESULTS.md  Research Setup.md  Research Setup_v2.md  SECURITY.md  environment.yml  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.lock.txt  requirements.txt
.github/: pull_request_template.md
archive/: CHANGELOG.md  paper_provenance.json
benchmarks/: bench_results.parquet  registry.yaml
config/: real_anchors.yaml
configs/: README.md  base.yaml  diagnostics.yaml  experiment.yaml  experiment_eval.yaml  irm.yaml  reproduce.yaml
data/: DATA_LICENSE.md  spy_sample.csv
diagnostics/: utils.py
docker/: Dockerfile  compose.yaml
docs/: CODE_AUDIT.md  CONFIGS.md  CONTRIBUTING.md  DATA.md  DEV_CLEANUP_NOTES.md  README.md  RELEASE.md  REPRODUCE.md  Research_Setup_v2.md  data_real.md  diagnostics.md  empirical_splits.md  figures.md  objectives.md  sim_crisis.md
experiments/: README.md  phase1_summary.md  phase2_plan.md  run_diagnostics.py  run_reproduce.py  run_train.py
goldens/: paper-lite.csv
infra/: __init__.py  io.py  plot_io.py  tables.py
meta/: CHANGELOG.md  CLEANUP.md  README.md  paper_provenance.json
reports/: README.md  data_ingest_report.md  leaderboard.html  runlog.md
scripts/: __init__.py  aggregate.py  aggregate_diagnostics.py  bootstrap_metrics.py  build_paper_diagnostics.py  compare_sanity.py  compute_diagnostics.py  diff_metrics.py  export_tables.py  find_latest_checkpoint.py  make_all_figures.py  make_reproduce.sh  make_scorecard.py  package_release.py  paper_provenance.py  plot_alignment_curves.py  plot_capital_efficiency_frontier.py  plot_capital_frontier.py  plot_cvar_by_method.py  plot_cvar_violin.py  plot_diag_correlations.py  plot_ig_vs_cvar.py  plot_invariance_vs_ig.py  plot_ire_scatter_3d.py  plot_method_schematic.py  plot_qq_tails.py  plot_regime_panels.py  plot_sweeps.py  prepare_data.py  reproduce_phase2.sh  run_baseline.py  run_eval.sh  run_of_record.sh  run_train.sh  summarize.py  train.py
src/: __init__.py  eval.py  train.py
tests/: __init__.py  conftest.py  test_checkpoint_manager.py  test_costs.py  test_cvar_estimator.py  test_data_pipeline.py  test_determinism.py  test_diagnostics.py  test_diagnostics_eval_only.py  test_diagnostics_metrics.py  test_diagnostics_schema.py  test_erm_base_regression.py  test_eval_baselines.py  test_export_long_format.py  test_external_metrics.py  test_feature_engineer_env.py  test_grad_align.py  test_gradient_penalty.py  test_hgca_penalty.py  test_hirm_head.py  test_hybrid_gate_shared.py  test_ig.py  test_irm_head_scope.py  test_isi.py  test_logging_provenance.py  test_paper_provenance.py  test_penalties.py  test_pricing_greeks.py  test_real_windows.py  test_report_schema.py  test_reproduce.py  test_run_logger.py  test_seed_reproducibility.py  test_seeding.py  test_sim_calibrators.py  test_sim_regimes.py  test_spurious_probe.py  test_spy_loader.py  test_training_loop_optimizer_steps.py  test_vr.py  (+1 more)
tools/: __init__.py  (+10 more)
(+562 files in other folders)
