[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invariant-hedging"
version = "0.0.0"
description = "Invariant hedging research codebase"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Invariant Hedging Team" }
]
license = { text = "MIT" }
keywords = ["finance", "reinforcement-learning", "invariance"]
dependencies = [
  "hydra-core==1.3.2",
  "numpy==1.26.*",
  "pandas==2.1.4",
  "scipy==1.11.4",
  "torch==2.2.*",
  "matplotlib>=3.8,<3.10",
  "plotly==5.18.0",
  "pyyaml==6.0.1",
  "wandb==0.16.2",
  "opt-einsum==3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
  "ruff==0.1.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
