[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invariant-hedging"
version = "0.0.0"
description = "Invariant hedging research codebase"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Invariant Hedging Team" }
]
license = { text = "MIT" }
keywords = ["finance", "reinforcement-learning", "invariance"]
dependencies = [
  "hydra-core==1.3.2",
  "numpy==1.26.*",
  "pandas==2.1.4",
  "scipy==1.11.4",
  "torch==2.2.*",
  "matplotlib>=3.8,<3.10",
  "plotly==5.18.0",
  "pyyaml==6.0.1",
  "wandb==0.16.2",
  "opt-einsum==3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
  "black==24.4.2",
  "mypy==1.10.0",
  "pre-commit==3.7.1",
  "ruff==0.6.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
plugins = []
ignore_missing_imports = true
namespace_packages = true
mypy_path = ["src"]
allow_redefinition = true
warn_unused_configs = true
