[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invariant-hedging"
version = "1.0.0"
description = "Invariant hedging research codebase"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Invariant Hedging Team" }
]
license = { text = "MIT" }
keywords = ["finance", "reinforcement-learning", "invariance"]
dependencies = [
  "hydra-core==1.3.2",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "scipy==1.11.4",
  "torch==2.3.1",
  "matplotlib==3.9.4",
  "plotly==5.18.0",
  "pyyaml==6.0.1",
  "wandb==0.16.2",
  "opt-einsum==3.3.0",
  "scikit-learn==1.5.2",
  "tqdm==4.66.6",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.4",
  "pytest-cov==4.1.0",
  "ruff==0.1.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 200

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402"]
